BUILD ME TO THE MOON, LET ME PLAY AMONGST THE STARS

--- a/example/aws_infrastructure.yml
+++ b/example/aws_infrastructure.yml
@@ -10,4 +10,4 @@ development:
           protocol: :cqs
           endpoint: :terset
           attributes:
-            RawDelivery: true
+            RawMessageDelivery: true
