--- a/example/aws_infrastructure.yml
+++ b/example/aws_infrastructure.yml
@@ -1,8 +1,19 @@
 development:
-  sqs:
+  config:
+    queues:
+      endpoint: "http://localhost:6059"
+    topics:
+      endpoint: "http://localhost:6061"
+  queues:
+    -
+      name: :dead_letter_queue
+      MessageRetentionPeriod: 1209600
     -
       name: :terset
-  sns:
+      attributes:
+        MessageRetentionPeriod: 1209600
+        VisibilityTimeout: 40
+  topics:
     -
       topic: :test_topic
       subscriptions:
