--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.rbc
 .bundle
 .config
+.envrc
 .yardoc
 Gemfile.lock
 InstalledFiles
@@ -15,6 +16,7 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+vendor/bin
 *.bundle
 *.so
 *.o
